syntax = "proto3";

package exocore.index;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message Entity {
    string id = 1;

    repeated Trait traits = 4;
}

message Trait {
    string id = 1;

    google.protobuf.Any message = 2;

    google.protobuf.Timestamp creation_date = 3;

    google.protobuf.Timestamp modification_date = 4;
}

message Reference {
    string entity_id = 1;
    string trait_id = 2;
}
